--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "debug": "~2.6.9",
     "eslint": "^6.8.0",
     "express": "~4.16.1",
-    "hbs": "~4.0.4",
+    "hbs": "^4.0.6",
     "http-errors": "~1.6.3",
     "mongodb": "^3.3.2",
     "mongoose": "^5.8.4",
