--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "custom-env": "^1.0.2",
     "debug": "~2.6.9",
     "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.9.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-unicorn": "^15.0.1",
     "express": "~4.16.1",
     "hbs": "^4.0.6",
     "http-errors": "~1.6.3",
     "mongodb": "^3.3.2",
     "mongoose": "^5.8.4",
     "morgan": "~1.9.1",
-    "nodemon": "^1.19.2"
+    "nodemon": "^1.19.2",
+    "prettier": "^1.19.1"
   }
 }
